Started the horrifying migration to an inline jobs profile editor.

--- a/app/styles/account/profile.sass
+++ b/app/styles/account/profile.sass
@@ -1,4 +1,8 @@
+@import "app/styles/bootstrap/variables"
+
 #profile-view
+  $sideBackground: rgb(220, 220, 220)
+
   .profile-control-bar
     background-color: rgb(78, 78, 78)
     width: 100%
@@ -14,6 +18,7 @@
 
   .main-content-area
     padding: 0
+    background-color: white
 
     .flat-button
       width: 100%
@@ -68,7 +73,7 @@
         .left-column
           width: $side-width - 2 * $side-padding
           padding: $side-padding
-          background-color: rgb(220, 220, 220)
+          background-color: $sideBackground
 
           .sub-column
             width: $side-width - 2 * $side-padding
@@ -81,7 +86,7 @@
             img.profile-photo
               width: $side-width - 2 * $side-padding
               border-radius: 6px
-                
+
             .profile-caption
               background-color: rgba(0, 0, 0, 0.5)
               color: white
@@ -128,7 +133,7 @@
               overflow-wrap: break-word
 
           code
-            background-color: rgb(220, 220, 220)
+            background-color: $sideBackground
             color: #555
             margin: 2px 0
             display: inline-block
@@ -161,7 +166,7 @@
 
         .right-column
           width: $side-width
-          background-color: rgb(220, 220, 220)
+          background-color: $sideBackground
 
           .sub-column
             width: $side-width - 2 * $side-padding
@@ -176,7 +181,7 @@
             li
               margin-bottom: 10px
               padding: 5px 3px
-              border: 2px solid rgb(220, 220, 220)
+              border: 2px solid $sideBackground
               transition: .5s ease-in-out
               position: relative
               background-color: white
@@ -218,3 +223,54 @@
                 -moz-filter: grayscale(0%)
                 -o-filter: grayscale(0%)
                 filter: grayscale(0%)
+
+  .main-content-area
+
+    .job-profile-container
+      .editable-section
+        position: relative
+
+        .editable-form
+          display: none
+          background-color: white
+          padding: 5px 5px 5px 5px
+
+      .editable-icon
+        display: none
+  
+    .job-profile-container.editable-profile
+
+      .full-height-column.deemphasized
+        background-color: $sideBackground
+
+      .saving
+        opacity: 0.75
+  
+      .editable-thinner
+        padding-right: 30px
+                
+      .editable-icon
+        display: block
+        position: absolute
+        right: 5px
+        top: 5px
+        font-size: 20px
+        color: $blue
+        opacity: 0.5
+          
+      .edit-label
+        color: $blue
+      
+      .editable-section.deemphasized, .our-notes-section.deemphasized
+        opacity: 0.5
+
+      .editable-section:hover
+        cursor: pointer
+        outline: 1px solid $blue
+  
+        .editable-icon
+          opacity: 1.0
+          cursor: pointer
+
+        .editable-form
+          cursor: default
