Got repeatables working flawlessly and improved the achievement popup by a great deal

--- a/app/styles/notify.sass
+++ b/app/styles/notify.sass
@@ -45,3 +45,6 @@
           font-family: Bangers
           font-size: 16px
           float: right
+
+.progress-bar-white
+  background-color: white
