--- a/app/templates/editor/achievement/edit.jade
+++ b/app/templates/editor/achievement/edit.jade
@@ -1,25 +1,29 @@
 extends /templates/base
 
 block content
-  div
-    ol.breadcrumb
-      li
-        a(href="/editor", data-i18n="editor.main_title") CodeCombat Editors
-      li
-        a(href="/editor/achievement", data-i18n="editor.achievement_title") Achievement Editor
-      li.active
-        | #{achievement.attributes.name}
+  if me.isAdmin()
+    div
+      ol.breadcrumb
+        li
+          a(href="/editor", data-i18n="editor.main_title") CodeCombat Editors
+        li
+          a(href="/editor/achievement", data-i18n="editor.achievement_title") Achievement Editor
+        li.active
+          | #{achievement.attributes.name}
 
-  button(data-i18n="common.save", disabled=authorized === true ? undefined : "true").btn.btn-primary#save-button Save
+      button(data-i18n="common.save", disabled=authorized === true ? undefined : "true").btn.btn-primary#save-button Save
 
-  h3(data-i18n="achievement.edit_achievement_title") Edit Achievement
-    span
-      |: "#{achievement.attributes.name}"
+      h3(data-i18n="achievement.edit_achievement_title") Edit Achievement
+        span
+          |: "#{achievement.attributes.name}"
 
-  #achievement-treema
+      #achievement-treema
 
-  #achievement-view
+      #achievement-view
 
-  hr
+      hr
 
-  div#error-view
+      div#error-view
+  else
+    .alert.alert-danger
+      span Admin only. Turn around.
